Inefficient constructor use refactored